Fixed overlapping issue

--- a/src/components/SectionDApp/SectionDApp.scss
+++ b/src/components/SectionDApp/SectionDApp.scss
@@ -26,9 +26,17 @@
         .top-row {
             padding: 15px 0;
             text-align: center;
-            .title {
-                font-size: 1.3em;
-                font-weight: 200;
+            .title-container{
+                @media (max-width: 1400px) {
+                    padding: 0 20px;
+                }
+                @media (max-width: 992px) {
+                    padding: 0 20px;
+                }
+                .title {
+                    font-size: 1.3em;
+                    font-weight: 200;
+                }
             }
             .beta-form-group {
                 @media (max-width: 767px) {
@@ -131,6 +139,12 @@
                 width: 70%;
                 position: absolute;
                 top: -200px; right: -50px;
+                @media (max-width: 1600px) {
+                    right: -25px;
+                }
+                @media (max-width: 992px) {
+                    // right: -25px;
+                }
                 @media (max-width: 767px) {
                     width: 100%;
                     margin: 0;
@@ -170,12 +184,13 @@
             }
             
             .beta-arrows-container {
+                
                 @media (max-width: 767px) {
                     margin: 0;
                     padding: 0;
-                    font-size: 1em;
                     overflow-x: scroll;
                 }
+
                 .beta-arrows-wrapper {
                     @media (max-width: 767px) {
                         width: 1000px;
@@ -184,7 +199,14 @@
                         width: 100%;
                     }
                     &__text {
+                        @media (max-width: 1400px) {
+                            font-size: 0.7em;
+                        }
+                        @media (max-width: 992px) {
+                            font-size: 0.1em;
+                        }
                         @media (max-width: 767px) {
+                            font-size: 1em;
                             width: inherit;
                         }
                         position: absolute;
